--- a/index.html
+++ b/index.html
@@ -5,41 +5,46 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <title>GACOR EXPRESS</title>
 
+<!-- Bootstrap 5 -->
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-<link rel="manifest" href="manifest.json">
+
+<!-- Leaflet (OpenStreetMap) -->
+<link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"/>
+
+<!-- Icons -->
+<link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css" rel="stylesheet">
 
 <style>
-body {
-  background:#f5f5f5;
+body{
+  background:#f4f6f9;
 }
-.app-header {
-  background: linear-gradient(135deg,#1e88e5,#43a047);
-  color:#fff;
+.app-header{
+  background:linear-gradient(135deg,#0d6efd,#20c997);
+  color:white;
   padding:20px;
   text-align:center;
 }
-.banner img {
+.banner img{
   max-width:100%;
-  border-radius:15px;
+  border-radius:12px;
 }
-.menu-btn {
-  border-radius:15px;
-  padding:20px;
-  background:#fff;
-  box-shadow:0 4px 10px rgba(0,0,0,.1);
+.menu-card{
   cursor:pointer;
+  transition:.3s;
 }
-.menu-btn i {
-  font-size:30px;
+.menu-card:hover{
+  transform:scale(1.05);
+}
+#map{
+  height:250px;
 }
 </style>
 </head>
-
 <body>
 
 <div class="app-header">
-  <h3>GACOR EXPRESS</h3>
-  <small>Layanan Antar Jemput & Makanan</small>
+  <h2 class="fw-bold">GACOR EXPRESS</h2>
+  <p>Layanan Antar Jemput Ojek Online & Antar Makanan<br>Area Long Ikis</p>
 </div>
 
 <div class="container my-3">
@@ -50,107 +55,133 @@ body {
   </div>
 
   <!-- Menu -->
-  <div class="row g-3 text-center">
+  <div class="row text-center g-3">
     <div class="col-4">
-      <div class="menu-btn" onclick="openOrder('Ojek Online')">
-        <i>🏍</i>
-        <div>Ojek</div>
+      <div class="card menu-card p-3" onclick="openOrder('Ojek Online')">
+        <i class="bi bi-bicycle fs-1 text-primary"></i>
+        <p class="mt-2 fw-semibold">Ojek Online</p>
       </div>
     </div>
     <div class="col-4">
-      <div class="menu-btn" onclick="openOrder('Food Delivery')">
-        <i>🍔</i>
-        <div>Food</div>
+      <div class="card menu-card p-3" onclick="openOrder('Food Delivery')">
+        <i class="bi bi-bag-heart fs-1 text-success"></i>
+        <p class="mt-2 fw-semibold">Food Delivery</p>
       </div>
     </div>
     <div class="col-4">
-      <div class="menu-btn" onclick="openOrder('Jastip')">
-        <i>📦</i>
-        <div>Jastip</div>
+      <div class="card menu-card p-3" onclick="openOrder('Jastip')">
+        <i class="bi bi-box-seam fs-1 text-warning"></i>
+        <p class="mt-2 fw-semibold">Jastip</p>
+      </div>
+    </div>
+  </div>
+
+</div>
+
+<!-- Modal -->
+<div class="modal fade" id="orderModal" tabindex="-1">
+  <div class="modal-dialog modal-lg modal-dialog-centered">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title">Form Pemesanan</h5>
+        <button class="btn-close" data-bs-dismiss="modal"></button>
+      </div>
+      <div class="modal-body">
+
+        <div class="mb-2">
+          <label>Nama Pemesan</label>
+          <input type="text" id="nama" class="form-control">
+        </div>
+
+        <div class="mb-2">
+          <label>Layanan</label>
+          <input type="text" id="layanan" class="form-control" readonly>
+        </div>
+
+        <button class="btn btn-primary mb-2 w-100" onclick="getLocation()">📍 Ambil Lokasi Jemput</button>
+
+        <div id="map" class="mb-2"></div>
+
+        <div class="mb-2">
+          <label>Tujuan Antar</label>
+          <input type="text" id="tujuan" class="form-control" placeholder="Masukkan koordinat / klik peta">
+        </div>
+
+        <div class="mb-2">
+          <label>Tarif</label>
+          <input type="text" id="tarif" class="form-control" readonly>
+        </div>
+
+        <button class="btn btn-success w-100" onclick="sendWA()">🚀 Kirim Pesanan via WhatsApp</button>
+
       </div>
     </div>
   </div>
 </div>
 
-<!-- Modal -->
-<div class="modal fade" id="orderModal">
-<div class="modal-dialog">
-<div class="modal-content">
-<div class="modal-header">
-<h5 class="modal-title">Form Pemesanan</h5>
-<button class="btn-close" data-bs-dismiss="modal"></button>
-</div>
-
-<div class="modal-body">
-<input type="text" id="nama" class="form-control mb-2" placeholder="Nama Pemesan">
-<input type="text" id="layanan" class="form-control mb-2" readonly>
-
-<button class="btn btn-primary w-100 mb-2" onclick="getLocation()">Ambil Lokasi Jemput (GPS)</button>
-<input type="text" id="jemput" class="form-control mb-2" readonly placeholder="Lokasi Jemput">
-
-<input type="text" id="antar" class="form-control mb-2" placeholder="Tujuan Antar">
-
-<input type="text" id="tarif" class="form-control mb-2" readonly placeholder="Tarif">
-</div>
-
-<div class="modal-footer">
-<button class="btn btn-success w-100" onclick="kirimWA()">Kirim Pesanan</button>
-</div>
-
-</div>
-</div>
-</div>
-
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+<script src="https://unpkg.com/leaflet@1.9.4/dist/leaflet.js"></script>
 
 <script>
-let lat1, lon1;
+let modal = new bootstrap.Modal(document.getElementById('orderModal'));
+let map, markerJemput, markerAntar;
+let jemputLatLng, antarLatLng;
 
 function openOrder(layanan){
-  document.getElementById("layanan").value = layanan;
-  new bootstrap.Modal(document.getElementById("orderModal")).show();
+  document.getElementById('layanan').value = layanan;
+  modal.show();
+  setTimeout(initMap,500);
+}
+
+function initMap(){
+  if(map) return;
+  map = L.map('map').setView([-2.1,116.3],13);
+  L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png',{
+    attribution:'© OpenStreetMap'
+  }).addTo(map);
+
+  map.on('click', function(e){
+    antarLatLng = e.latlng;
+    if(markerAntar) map.removeLayer(markerAntar);
+    markerAntar = L.marker(antarLatLng).addTo(map).bindPopup("Lokasi Antar").openPopup();
+    hitungTarif();
+  });
 }
 
 function getLocation(){
   navigator.geolocation.getCurrentPosition(pos=>{
-    lat1 = pos.coords.latitude;
-    lon1 = pos.coords.longitude;
-    document.getElementById("jemput").value = lat1+","+lon1;
+    jemputLatLng = {
+      lat:pos.coords.latitude,
+      lng:pos.coords.longitude
+    };
+    map.setView(jemputLatLng,15);
+    if(markerJemput) map.removeLayer(markerJemput);
+    markerJemput = L.marker(jemputLatLng).addTo(map).bindPopup("Lokasi Jemput").openPopup();
   });
 }
 
-function hitungTarif(km){
+function hitungTarif(){
+  let jarak = map.distance(jemputLatLng,antarLatLng)/1000;
   let tarif = 9000;
-  if(km>1){
-    let extra = Math.round((km-1)*1000);
-    tarif += Math.round(extra/1000)*1000;
+  if(jarak > 1){
+    let extra = (jarak - 1) * 1000;
+    if(extra < 500) extra = 1000;
+    else extra = Math.round(extra/1000)*1000;
+    tarif += extra;
   }
-  return tarif;
+  document.getElementById('tarif').value = "Rp " + tarif.toLocaleString();
 }
 
-function kirimWA(){
-  let nama = nama.value;
-  let layanan = document.getElementById("layanan").value;
-  let jemput = document.getElementById("jemput").value;
-  let antar = document.getElementById("antar").value;
-
-  let maps = `https://www.google.com/maps?q=${jemput}`;
-  let tarif = hitungTarif(1.6); // simulasi jarak
-  document.getElementById("tarif").value = tarif;
-
-  let text = `Pesanan GACOR EXPRESS%0A
+function sendWA(){
+  let nama = document.getElementById('nama').value;
+  let layanan = document.getElementById('layanan').value;
+  let mapsLink = `https://www.google.com/maps?q=${jemputLatLng.lat},${jemputLatLng.lng}`;
+  let msg = `Halo GACOR EXPRESS%0A
 Nama: ${nama}%0A
 Layanan: ${layanan}%0A
-Jemput: ${jemput}%0A
-Antar: ${antar}%0A
-Tarif: Rp${tarif}%0A
-Maps: ${maps}`;
-
-  window.open(`https://wa.me/6282154306353?text=${text}`);
-}
-
-if('serviceWorker' in navigator){
-  navigator.serviceWorker.register('sw.js');
+Lokasi Jemput: ${mapsLink}%0A
+Tarif: ${document.getElementById('tarif').value}`;
+  window.open(`https://wa.me/6282154306353?text=${msg}`,'_blank');
 }
 </script>
 
